--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -1,6 +1,7 @@
 {
   "name": "auth",
   "version": "1.0.0",
+  "license": "MIT",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
