--- a/packages/dashboard/package.json
+++ b/packages/dashboard/package.json
@@ -1,6 +1,7 @@
 {
   "name": "dashboard",
   "version": "1.0.0",
+  "license": "MIT",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
