--- a/packages/marketing/package.json
+++ b/packages/marketing/package.json
@@ -1,9 +1,11 @@
 {
   "name": "marketing",
   "version": "1.0.0",
+  "license": "MIT",
   "scripts": {
     "dev": "webpack serve --config config/webpack.dev.js",
-    "start": "webpack serve --config config/webpack.dev.js"
+    "start": "webpack serve --config config/webpack.dev.js",
+    "build": "webpack --config config/webpack.prod.js"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
